tests/hole_param_unreachable_bad.stderr
tests/hole_param_unreachable_bad.hop:3:9: error: HOP2002: unknown identifier '_'
