tests/hole_param_unreachable_bad.hop
// Verifies hole parameter unreachable is rejected.
fn example(a, _, c int) int {
	return _
}
